@@ -83,6 +83,7 @@ function enemy:stop(movement)
     thrown_item = "protected",
     fire = "protected",
     jump_on = "ignored",
+    ice = 0,
     hammer = "protected",
     hookshot = "protected",
     magic_powder = "protected",
@@ -111,6 +112,7 @@ function enemy:go_hero()
     sword = 1,
     thrown_item = 3,
     fire = 3,
+    ice = 0,
     jump_on = "ignored",
     hammer = 3,
     hookshot = "immobilized",
