@@ -57,7 +57,7 @@ enemy:register_event("on_created", function(enemy)
   enemy:set_life(10)
   enemy:set_size(16, 16)
   enemy:set_origin(8, 13)
-  enemy:set_fire_reaction_sprite(sprite, reaction)
+  --enemy:set_fire_reaction_sprite(sprite, reaction)
 end)
 
 -- Restart settings.
@@ -67,10 +67,10 @@ enemy:register_event("on_restarted", function(enemy)
   	arrow = 1,
   	boomerang = "immobilized",
   	explosion = 1,
-  	sword = 0,
+  	sword = 1,
   	thrown_item = 1,
     fire = "immobilized",
-    ice = 1,
+    ice = 0,
   	jump_on = "ignored",
   	hammer = 1,
   	hookshot = 1,
