@@ -373,6 +373,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	ADD: Added Bari colour variations (#143).
 	ADD: Added soldier colour variations.
 	ADD: Rescripted the feather (#144).
+	ADD: Added enemy:is_frozen() and enemy:set_frozen() methods.
 	CHG: Redone Spectral Ganon's sprite (#29).
 	CHG: Changed Spectral Ganon's settings according to the sprite (#29).
 	CHG: Moved the green house in the east of the castle.
@@ -397,6 +398,8 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Changed Link's animation to stopped after bonking against a wall.
 	CHG: Updated the enemy weapon script from ALTTD.
 	CHG: Renamed the castle as dungeon 16.
+	CHG: Finished rescripting the Ice Rod.
+	CHG: Rescripted the Fire Rod.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
